_sass/_navigation.scss
.site-navigation {
  position: relative;
  width: 1.5rem;

  .no-js & {
    margin-top: 1rem;
  }

  @include bp($mq-medium) {
    display: inline-block;
    width: auto;
  }
}

.site-menu-button {
  position: relative;
  top: -0.25rem;
  width: 1.5rem;
  height: 1.5rem;
  padding: 0;
  background: var(--color-transparent);
  border: 0;
  cursor: pointer;
  -webkit-appearance: none; // stylelint-disable-line

  .no-js & {
    display: none;
    left: -999em;
    opacity: 0;
  }

  svg {
    width: 1.5rem;
    height: 1.5rem;
    pointer-events: none;
  }

  &:hover {
    svg {
      stroke: var(--color-link);
    }
  }

  &:focus {
    @include focus-with-shadow;
  }
}

.site-menu {
  position: absolute;
  right: 0;
  display: block;
  width: 100%;
  min-width: 12rem;
  margin-top: 0.25rem;
  background: var(--color-background-tertiary);
  border-radius: 0.25rem;

  &[aria-hidden="true"] {
    display: none;
  }

  .no-js & {
    position: relative;
  }

  .db-page-link {
    display: block;
    width: 100%;
    padding: 0.5rem 1rem;
    border-bottom: $border-thin solid var(--color-background);

    &:last-child {
      border-bottom: 0;
    }
  }

  ul {
    margin: 0;
    list-style: none;
  }
}

